lib/tools/orbit/test_output/advanced_runcore_test.output
QStandardPaths: wrong permissions on runtime directory /run/user/1000/, 0755 instead of 0700
Flow compiler (3rd generation)

Processing 'orbit' on http server
done in 0.37s

tests/advanced_runcore_test.orb: tests/advanced_runcore_test.orb:4:12: Parse error
let arr1 = [10, 20, 30, 40, 50];
           ^
app->exec() == 1
